# fp2022

SML_VPR_R1T/: Lambda.opam  README.md  dune-project
SML_VPR_R1T/demos/: demoInterpret.ml  demoInterpret.t  dune
SML_VPR_R1T/lib/: ast.ml  ast.mli  dune  inferencer.ml  inferencerTest.ml  interpreter.ml  interpreterTest.ml  parser.ml  parserTest.ml  typing.ml
