(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-or-later)

(authors "Nikita Olkhovsky")

(maintainers "Nikita Olkhovsky")

(bug_reports "https://github.com/NikitaSPBU/fp2022")

(package
 (name SML_VPR_R1T)
 (synopsis "SML + Value polymorphism restriction + rank 1 typing")
 (description "SML + Value polymorphism restriction + rank 1 typing")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_deriving
  (odoc :with-doc)
  (ocamlformat :build)
  base))
